--- a/entry/src/main/resources/base/layout/ability_main.xml
+++ b/entry/src/main/resources/base/layout/ability_main.xml
@@ -1,18 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<DirectionalLayout
+<DependentLayout
     xmlns:ohos="http://schemas.huawei.com/res/ohos"
     ohos:height="match_parent"
     ohos:width="match_parent"
-    ohos:orientation="vertical">
+    ohos:background_element="#ffffff">
+
 
     <Text
-        ohos:id="$+id:text_helloworld"
+        ohos:id="$+id:text"
         ohos:height="match_content"
         ohos:width="match_content"
-        ohos:background_element="$graphic:background_ability_main"
-        ohos:layout_alignment="horizontal_center"
-        ohos:text="$string:mainability_HelloWorld"
-        ohos:text_size="50px"
+        ohos:text="这是我的第一个鸿蒙应用"
+        ohos:text_size="20fp"
+        ohos:text_color="#000000"
+        ohos:center_in_parent="true"
+        ohos:bottom_margin="30vp"
         />
 
-</DirectionalLayout>
+    <Button
+        ohos:id="$+id:button"
+        ohos:height="match_content"
+        ohos:width="match_content"
+        ohos:text="跳转下一页"
+        ohos:text_color="#ffffff"
+        ohos:text_size="20fp"
+        ohos:top_padding="8vp"
+        ohos:bottom_padding="8vp"
+        ohos:background_element="$graphic:button_bg"
+        ohos:below="$id:text"
+        ohos:horizontal_center="true"
+        />
+</DependentLayout>
